--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <body>
     <h1>hello tailwind css</h1>
+
+    <h2>hyperlinks pages list:</h2>
+    <a href="typography.html">typography</a> <br>
+    <a href="background.html">background</a> <br>
+    <a href="width-height.html">width $ height</a> <br>
+    <a href="flex-responsive.html">flex-responsive</a>
     
 </body>
 </html>
