alhamdulliah tailwind core concept complete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <a href="typography.html">typography</a> <br>
     <a href="background.html">background</a> <br>
     <a href="width-height.html">width $ height</a> <br>
-    <a href="flex-responsive.html">flex-responsive</a>
+    <a href="flex-responsive.html">flex-responsive</a> <br>
+    <a href="grid-responsive.html">grid-responsive</a> <br>
     
 </body>
 </html>
